fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 	box-sizing: border-box;
 	font-family: "Mukta", sans-serif;
 	font-family: "Poppins", sans-serif;
